# terraform-provider-burnham

./: .gitignore  .goreleaser.yml  CHANGELOG.md  GNUmakefile  LICENSE  README.md  go.mod  go.sum  main.go
.github/: dependabot.yml
.github/workflows/: _bench-runners.yml  ci.yml  dependabot-auto-merge.yml  dependabot-auto-release.yml  font-update.yml  release.yml  test.yml
cmd/gendoctemplates/: main.go
docs/: index.md
docs/functions/: applestringsdecode.md  applestringsencode.md  asn1_decode.md  base32decode.md  base32encode.md  base64brotli.md  base64decode.md  base64encode.md  base64zopfli.md  bit_and.md  bit_clear.md  bit_not.md  bit_or.md  bit_set.md  bit_shift_left.md  bit_shift_right.md  bit_test.md  bit_xor.md  btoe.md  cbordecode.md  cborencode.md  cedardecode.md  cedarencode.md  cedarevaluate.md  cedarformat.md  cedarvalidate.md  celdecode.md  celencode.md  celevaluate.md  celformat.md  celvalidate.md  cidr_contains.md  cidr_enumerate.md  cidr_expand.md  cidr_filter_version.md  cidr_find_free.md  cidr_first_ip.md  cidr_host_count.md  cidr_intersect.md  cidr_is_private.md  (+151 more)
examples/: dataformat.tf  main.tf  networking.tf
examples/provider/: provider.tf
internal/provider/: acceptance_applestrings_test.go  acceptance_cbor_test.go  acceptance_cel_test.go  acceptance_compression_test.go  acceptance_cryptography_test.go  acceptance_csv_test.go  acceptance_dotenv_test.go  acceptance_encoding_test.go  acceptance_examples_test.go  acceptance_geographic_test.go  acceptance_hcl_test.go  acceptance_helpers_test.go  (+61 more)
internal/provider/documents/typst/rust/: Cargo.toml
internal/provider/documents/typst/rust/src/: lib.rs
internal/provider/image/resvg/rust/: Cargo.toml
internal/provider/image/resvg/rust/src/: lib.rs
internal/provider/regex/rust/: Cargo.toml
internal/provider/regex/rust/src/: lib.rs
templates/: index.md.tmpl
tools/: tools.go
(+732 files in other folders)
